--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -28,20 +28,13 @@
       <div class="vert-text">
 
 
-        <div class="col-slogan row">
+        <div class="col-slogan">
 
-              <h1 class="login-title"> AGROSOCIAL </h1>
+              <h1 class="login-title"> AgroSocial </h1>
               <h4 class="login-slogan">A SEMENTE DO SEU NEGÓCIO</h4>
               
         </div>
-            <div class="row">
-                    <div class="col-md-4 col-md-offset-4 text-center">
-                      <h2>O que fazemos</h2>
-                      <hr>
-                     
-                    </div>
-             
-            </div>
+            
              
       </div>
       
@@ -57,74 +50,71 @@
   </div>
 
   <div id="section_negocio" class="login_section_information slide teste img-responsive" data-slide="2"  data-speed="10">
-      
-       <div class="services">
-            <div class="container">
-                  
-                         <div class="row">
 
-                                <div class="service-item">
+ <section class="panel">
+        <div class="panel-body">
+          <div class="col-md-5 text-center">
+             <div class="service-item">
                                     
                                     
                                     <a class="frame" data-fancybox-type="iframe" href="http://www.youtube.com/embed/RetFcjbzInY?autoplay=1">
-                                      <i class="service-icon icon-shopping-cart">
-                                       
-                                      </i>
+                                      <i class="service-icon icon-shopping-cart"></i>
                                     </a>
+             </div>
 
+          </div>
+          <div class="col-sm-7">
+                <div class="information">
 
+                                                <h1>Negócio</h1>
+                                                <br/>
+                                                <h4>
+                                                  Encontre o melhor preço para o produto que procura ou divulgue os seus produtos a uma vasta comunidade.
+                                                </h4>
+                                      
+                  </div>
+          </div>
+        </div>
 
-                                     <div class="information">
+    </section>
 
-                                    <h1>Negócio</h1>
-                                    <br/>
-                                    <p>
-                                      Encontre o melhor preço para o produto que procura ou divulgue os seus produtos a uma vasta comunidade.
-                                    </p>
-                                
-                                     </div>
-                                                      
-                              </div>
-
-                    </div>
-            </div>
-      </div>
-     
-  </div>
+      
+</div>
 
 <div id="login_body_image2" class="bgParallax" data-speed="15">
 </div>
 
 <div id="section_emprego" class="login_section_information slide teste" data-slide="2" data-speed="20">
-      
-       <div class="services">
-            <div class="container">
-                  
-                            <div class="row">
-
-                                <div class="service-item">
 
 
-                                   <a class="frame" data-fancybox-type="iframe" href="http://www.youtube.com/embed/XMkeeZgHY14?autoplay=1">                    
+    <section class="panel">
+        <div class="panel-body">
+          <div class="col-md-5 text-center">
+             <div class="service-item">
+                                    
+                                    
+                                    <a class="frame" data-fancybox-type="iframe" href="http://www.youtube.com/embed/XMkeeZgHY14?autoplay=1">                    
                                      <i class="service-icon icon-male"></i>
                                      </a>
+             </div>
 
-                                     <div class="information">
+          </div>
+          <div class="col-sm-7">
+                <div class="information">
 
-                                    <h1>Emprego</h1>
+                                                <h1>Emprego</h1>
                                     <br/>
-                                    <p>
+                                    <h4>
                                       Encontre um emprego à medida das suas capacidades ou a mão de obra que precisa para aquela tarefa específica.
-                                    </p>
+                                    </h4>
                                 
-                                     </div>
+                                      
+                  </div>
+          </div>
+        </div>
 
-                                                      
-                                </div>
-
-                           </div>
-            </div>
-      </div>
+    </section>
+      
      
   </div>
 
@@ -133,33 +123,35 @@
   </div>
 
   <div id="section_conhecimento" class="login_section_information slide teste" data-slide="2" data-speed="10">
-      
-       <div class="services">
-            <div class="container">
-                  
-                            <div class="row">
 
-                                <div class="service-item">
-                                                      
+
+    <section class="panel">
+        <div class="panel-body">
+          <div class="col-md-5 text-center">
+             <div class="service-item">
+                                    
+                                    
                                      <a class="frame" data-fancybox-type="iframe" href="http://www.youtube.com/embed/yCn7XZVuRDg?autoplay=1">
                                      <i class="service-icon icon-group"></i>
                                      </a>
+             </div>
 
-                                     <div class="information">
+          </div>
+          <div class="col-sm-7">
+                <div class="information">
 
-                                    <h1>Conhecimento</h1>
+                                                <h1>Conhecimento</h1>
                                     <br/>
-                                    <p>
+                                    <h4>
                                       Participe em workshops ou siga técnicos especializados na nossa academia. Partilhe conhecimento na sua área de interesse.
-                                    </p>
-                                
-                                     </div>
-                                             
-                                </div>
+                                    </h4>
+                                      
+                  </div>
+          </div>
+        </div>
 
-                           </div>
-            </div>
-      </div>
+    </section>
+      
      
   </div>
 
@@ -168,31 +160,33 @@
 
   <div id="section_divulgacao" class="login_section_information slide teste" data-slide="2"  data-speed="10">
       
-       <div class="services">
-            <div class="container">
-                  
-                            <div class="row">
-
-                                <div class="service-item">
-                                     <a class="frame" data-fancybox-type="iframe" href="http://www.youtube.com/embed/irLwbREnL54?autoplay=1">         
+       <section class="panel">
+        <div class="panel-body">
+          <div class="col-md-5 text-center">
+             <div class="service-item">
+                                    
+                                    
+                                      <a class="frame" data-fancybox-type="iframe" href="http://www.youtube.com/embed/irLwbREnL54?autoplay=1">         
                                      <i class="service-icon icon-bullhorn"></i>
-                                   </a>
+                                      </a>
+             </div>
 
-                                     <div class="information">
+          </div>
+          <div class="col-sm-7">
+                <div class="information">
 
-                                    <h1>Divulgação</h1>
+                                   <h1>Divulgação</h1>
                                     <br/>
-                                    <p>
+                                    <h4>
                                       Divulgue a sua empresa, negócio ou produtos facilmente e a quem realmente interessa.
-                                    </p>
-                                
-                                     </div>
-                                              
-                                </div>
+                                    </h4>
+                                      
+                  </div>
+          </div>
+        </div>
 
-                           </div>
-            </div>
-      </div>
+    </section>
+
      
   </div>
 
@@ -201,33 +195,33 @@
 
 <div id="section_participacao" class="login_section_information slide teste" data-slide="2"  data-speed="10">
       
-       <div class="services">
-            <div class="container">
-                  
-                            <div class="row">
-
-                                <div class="service-item">
-
+       <section class="panel">
+        <div class="panel-body">
+          <div class="col-md-5 text-center">
+             <div class="service-item">
+                                    
+                                    
                                      <a class="frame" data-fancybox-type="iframe" href="http://www.youtube.com/embed/D5seyeETouQ?autoplay=1">
                                                       
                                      <i class="service-icon icon-calendar-empty"></i>
-                                   </a>
+             </div>
 
-                                     <div class="information">
+          </div>
+          <div class="col-sm-7">
+                <div class="information">
 
                                     <h1>Participação</h1>
-                                    <br/>
-                                    <p>
-                                      Crie, promova e participe em eventos sociais ou profissionais.
-                                    </p>
-                                
-                                     </div>
-                                                
-                                </div>
+                                          <br/>
+                                          <h4>
+                                            Crie, promova e participe em eventos sociais ou profissionais.
+                                          </h4>
+                                      
+                  </div>
+          </div>
+        </div>
 
-                           </div>
-            </div>
-      </div>
+    </section>
+
      
   </div>
   <!-- ________________________ Section Video ___________________________________ -->
@@ -279,39 +273,46 @@
     <section id="section-regist" data-auto-size="0.6" >
 
              <div class="row allpocket">
-                      <div class="pricing-table ">
-                          <div class="pocket_bronze plan col-xs-6 col-md-6 ">
-                            <div class="plan-name-bronze ">
-                              <h2>Bronze</h2>
-                              <span>$8.99 / Month</span>
+                      <div class="pricing-table">
+                          <div class="pocket_bronze plan col-xs-6 col-md-6 panel">
+                            <div class="panel-title plan-name-bronze">
+                              <h2>Horta</h2>
+                              <span>3,99 € / 6 Meses</span>
                             </div>
-                            <ul>
-                              <li class="plan-feature">10 Users</li>
-                              <li class="plan-feature">5TB Disk Space</li>
-                              <li class="plan-feature"><a href="#" class="btn btn-primary btn-plan-select"><i class="icon-white icon-ok"></i> Select</a></li>
-                            </ul>
+                              <div class="panel-body text-center">
+
+
+                                  <h4 class="section_regist_text"> <span class="section_regist_text">Anuncios :  </span> 5 Slots</h4>
+                                  <h4 class="section_regist_text"> <span class="section_regist_text">Eventos : </span> 1 Slot</h4>
+                                  <h4><a href="#" class="btn btn-default"><i class="icon-white icon-ok"></i> Compre Aqui </a></h4>
+                                    
+                              </div>
                           </div>
                           <div class="pocket_silver plan col-xs-6 col-md-6 ">
-                            <div class="plan-name-silver">
-                              <h2>Silver <span class="badge badge-warning">Popular</span></h2>
-                              <span><strike>$10.99</strike>   <font color="red">$9.99 - <span class="label label-warning">Sale</span></font></span>
+                            <div class="panel-title plan-name-silver">
+                              <h2>Quinta</h2>
+                              <span>7.49 € / 6 Meses </span>
                             </div>
-                            <ul>
-                              <li class="plan-feature">50 Users</li>
-                              <li class="plan-feature">10TB Disk Space</li>
-                              <li class="plan-feature"><a href="#" class="btn btn-primary btn-plan-select"><i class="icon-white icon-ok"></i> Select</a></li>
-                            </ul>
+                                <div class="panel-body text-center">
+
+                                    <h4 class="section_regist_text"><span >Anuncios :  </span> 10 Slots</h4>
+                                    <h4 class="section_regist_text"><span >Eventos : </span> 2 Slot</h4>
+                                    <h4><a href="#" class="btn btn-default"><i class="icon-white icon-ok"></i> Compre Aqui </a></h4>
+                                 
+                                </div>
                           </div>
                           <div class="pocket_gold plan col-xs-6 col-md-6 ">
-                            <div class="plan-name-gold">
-                              <h2>Gold</h2>
-                              <span>$15.99 / Month</span>
-                            </div>
-                            <ul>
-                              <li class="plan-feature">Unlimited Users</li>
-                              <li class="plan-feature">Unlimited Space</li>
-                              <li class="plan-feature"><a href="#" class="btn btn-primary btn-plan-select"><i class="icon-white icon-ok"></i> Select</a></li>
-                            </ul>
+                                  <div class="plan-name-gold panel-title">
+                                    <h2>Herdade</h2>
+                                    <span>13.99 € / 6 Meses</span>
+                                  </div>
+                                 <div class="panel-body text-center">
+
+                                    <h4 class="section_regist_text"><span >Anuncios : </span>  20 Slots</h4>
+                                    <h4 class="section_regist_text"><span >Eventos : </span> 4 Slot</h4>
+                                    <h4 class="section_regist_text"><span >Estatisticas : </span> Gratis</h4>
+                                    <h4 class="plan-feature"><a href="#" class="btn btn-default"> Compre Aqui </a></h4>
+                                </div>
                           </div>
                       </div>
               </div>    
