--- a/app/views/admin/dashboard/index.html.erb
+++ b/app/views/admin/dashboard/index.html.erb
@@ -122,7 +122,7 @@
           <div class="col-lg-12">
             <div class="panel panel-primary">
               <div class="panel-heading">
-                <h3 class="panel-title"><i class="fa fa-bar-chart-o"></i> Traffic Statistics: October 1, 2013 - October 31, 2013</h3>
+                <h3 class="panel-title"><i class="fa fa-bar-chart-o"></i> Ultimos Anúncios </h3>
               </div>
               <div class="panel-body">
                 <div id="morris-chart-area"></div>
@@ -135,7 +135,7 @@
           <div class="col-lg-4">
             <div class="panel panel-primary">
               <div class="panel-heading">
-                <h3 class="panel-title"><i class="fa fa-long-arrow-right"></i> Traffic Sources: October 1, 2013 - October 31, 2013</h3>
+                <h3 class="panel-title"><i class="fa fa-long-arrow-right"></i> Ultimos Utilizadores</h3>
               </div>
               <div class="panel-body">
                 <div id="morris-chart-donut"></div>
@@ -194,7 +194,7 @@
           <div class="col-lg-4">
             <div class="panel panel-primary">
               <div class="panel-heading">
-                <h3 class="panel-title"><i class="fa fa-money"></i> Recent Transactions</h3>
+                <h3 class="panel-title"><i class="fa fa-money"></i> Negocios Fechados</h3>
               </div>
               <div class="panel-body">
                 <div class="table-responsive">
