--- a/app/views/academy/workshops/_form.html.erb
+++ b/app/views/academy/workshops/_form.html.erb
@@ -33,7 +33,7 @@
   </div>
   <div class="field">
     <%= f.label :date %><br>
-    <%= f.datetime_select :date %>
+    <%#= f.datetime_select :date %>
   </div>
   <div class="field">
     <%= f.label :description %><br>
@@ -41,7 +41,7 @@
   </div>
   <div class="field">
     <%= f.label :is_delected %><br>
-    <%= f.number_field :is_delected %>
+    <%#= f.number_field :is_delected %>
   </div>
   <div class="field">
     <%= f.label :requires_registration %><br>
