--- a/app/views/ads/_form.html.erb
+++ b/app/views/ads/_form.html.erb
@@ -111,7 +111,8 @@
       </div>
 
       <!--Link para adicionar mais imagens (show/hide JQuery)-->
-      <a id='add'><i class="fa fa-plus"></i> Adicionar outra</a>
+      <br>
+      <a id='add' class="btn btn-info"><i class="fa fa-plus"></i> Adicionar outra</a>
 
       <div class="existingPaperclipFiles">
 
