--- a/app/views/admin/categories/index.html.erb
+++ b/app/views/admin/categories/index.html.erb
@@ -21,7 +21,7 @@
             <td><%= category.name %></td>
             <td><%= category.description %></td>
             <td>
-              <span class="label" style="background-color: #<%= category.color %>">
+              <span class="label" style="background-color: #<%= category.color %>"></span>
             </td>
             <td><%= category.ads.count %></td>
             <td><%= link_to 'Editar', edit_admin_category_path(category) %></td>
