--- a/app/views/admin/dashboard/index.html.erb
+++ b/app/views/admin/dashboard/index.html.erb
@@ -125,6 +125,7 @@
                 <h3 class="panel-title"><i class="fa fa-bar-chart-o"></i> Ultimos Anúncios </h3>
               </div>
               <div class="panel-body">
+
                 <div id="morris-chart-area"></div>
               </div>
             </div>
@@ -135,10 +136,11 @@
           <div class="col-lg-4">
             <div class="panel panel-primary">
               <div class="panel-heading">
-                <h3 class="panel-title"><i class="fa fa-long-arrow-right"></i> Ultimos Utilizadores</h3>
+                <h3 class="panel-title"><i class="fa fa-long-arrow-right"></i> Stats Utilizadores</h3>
               </div>
               <div class="panel-body">
-                <div id="morris-chart-donut"></div>
+              <%= pie_chart({"Agricultores" => 20, "Pescadores" => 5,"Caçadores" => 15}) %>
+               <% pie_chart User.group("name").count %>
                 <div class="text-right">
                   <a href="#">View Details <i class="fa fa-arrow-circle-right"></i></a>
                 </div>
