--- a/app/views/layouts/admin.html.erb
+++ b/app/views/layouts/admin.html.erb
@@ -3,9 +3,9 @@
   <head>
     <meta charset="utf-8">
     <title>AgroSocial Admin</title>
-
+    <%= javascript_include_tag "//www.google.com/jsapi", "chartkick" %>
+    
     <%= javascript_include_tag "application","data-turbolinks-track" => true %>
-   
     <%= stylesheet_link_tag "application","admin_theme","data-turbolinks-track" => true  %>
 
     <%= csrf_meta_tags %>
