added format option in the question and answers

--- a/app/views/academy/questions/_form.html.erb
+++ b/app/views/academy/questions/_form.html.erb
@@ -17,9 +17,9 @@
     </div>
 
     <div class="control-group">
-      <%= f.label :text, "Descrição:",:class=>"control-label" %>
+      <%= f.label :text, "Pergunta:",:class=>"control-label" %>
       <div class="controls">
-        <%= f.text_area :text,:placeholder => "Defina a sua questão..." ,:class=>"form-control",:rel=>"tooltip",:title=>"Explique de forma clara e sucinta a sua questão." %>
+        <%= f.text_area :text,:placeholder => "Defina a sua questão..." ,:id => "some-textarea", :class=>"form-control",:rel=>"tooltip",:title=>"Explique de forma clara e sucinta a sua questão." %>
       </div>
     </div>
 
