--- a/app/views/academy/answers/_answer.html.erb
+++ b/app/views/academy/answers/_answer.html.erb
@@ -14,23 +14,22 @@
 
       <div class="col-xs-2 col-md-2"><%##  Avatar do user que respondeu  ##%>
         <%=link_to image_tag(answer.user.avatar.url(:medium),:width => "70%",:class => "img-circle"), answer.user %>
-   
+
         <%= answer.user.name %>
       </div>
 
       <div class="col-xs-9 col-md-10 "><%##  texto da resposta  ##%>
-        <%= answer.text %>
-        <br>o botão de edit não está direito
+        <%= answer.text.html_safe %>
       </div>
     </div>
-   
+
 
       <div class="panel-footer">
       <%###  answers votes  ###%>
             <%#  Verify if the user is logged or if is the answer's owner %>
             <% if !user_signed_in? || current_user.id == answer.user.id #if not logged or is the owner them cant vote %>
 
-              
+
               <label class="label label-default" syle="font-size:10px"><%= answer.up - answer.down %></label>
               <label class="label label-info" >Minha Resposta</label>
             <% else %>
@@ -41,11 +40,11 @@
               <label class="label label-success" syle="font-size:10px"><%= answer.up - answer.down %></label>
               <%= link_to '<i class="fa fa-thumbs-o-down fa-2x '.html_safe + down_vote?( vote ) +'"></i>'.html_safe, academy_down_vote_path(:answer => answer), :title => "Dá menos um ponto a esta resposta!!"  %>
             <% end %>
-      <%###  end of answers votes  ###%> 
+      <%###  end of answers votes  ###%>
 
           <div class="pull-right">
             <%= was_edited?( answer ) %>
-              
+
           </div>
        </div>
 
