mapa adicionado no edit anuncio

--- a/app/views/ads/new.html.erb
+++ b/app/views/ads/new.html.erb
@@ -11,7 +11,7 @@
 
 <%= link_to 'Voltar', myads_user_path(current_user.id) %>
 
-<script>
+<!--<script>
     $(function() {
         function getLocation(){
             if (navigator.geolocation){
@@ -53,4 +53,4 @@
 
 
     });
-</script>
+</script>-->
