[Update] Index Perguntas

--- a/app/views/academy/answers/_form_aux.html.erb
+++ b/app/views/academy/answers/_form_aux.html.erb
@@ -19,7 +19,7 @@
 <div class="col-xs-10 col-md-10">
 <div class="control-group">
   <div class="controls">
-    <%= f.text_area :text,:id=>"text_comment",:rows=>5,:placeholder => "Escreva a sua resposta aqui..." ,:id => "some-textarea", :class=>"form-control counted",:rel=>"tooltip",:title=>"Responda de forma clara e sucinta." %>
+    <%= f.text_area :text,:rows=>5,:placeholder => "Escreva a sua resposta aqui..." ,:id => "some-textarea", :class=>"form-control counted",:rel=>"tooltip",:title=>"Responda de forma clara e sucinta." %>
   </div>
 </div>
 </div>
