[Update] added field ocupation to User

--- a/app/views/admin/types/index.html.erb
+++ b/app/views/admin/types/index.html.erb
@@ -19,7 +19,7 @@
         <td><%= type.flag %></td>
         <td><%= link_to 'Show', admin_type_path(type) %></td>
         <td><%= link_to 'Edit', edit_admin_type_path(type) %></td>
-        <td><%= link_to 'Destroy',admin_type_path(type), method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <td><%= link_to 'Destroy',admin_type_path(type), method: :delete, data: { confirm: 'Tem a certeza?' } %></td>
       </tr>
     <% end %>
   </tbody>
