--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -37,7 +37,7 @@
                                               <p><span>Data de Nascimento</span>:<%= I18n.localize(@user.birthday) if @user.birthday %></p>
                                           </div>
                                           <div class="bio-row">
-                                              <p><span>Ocupação </span>: UI Designer</p>
+                                              <p><span>Ocupação </span>: <%= @user.ocupation %></p>
                                           </div>
                                           <div class="bio-row">
                                               <p><span>Email </span>: <%= @user.email %></p>
